--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <main>
     <section id="section-login">
         <h2>Login</h2>
-        <form class="row g-3">
-            
+        <form class="row g-3" (submit)="onSubmit()">
+                      
               <label for="staticUsuario" class="visually-hidden">Usuário</label>
               <input type="text" class="form-control" id="staticUsuario" placeholder="email@exemplo.com">
             
